Update the implementation